--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^8.0.0",
     "css-loader": "^5.1.3",
+    "eslint": "^8.35.0",
+    "eslint-plugin-vue": "^9.9.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "postcss": "^8.2.8",
